# ktexteditor-key-recorder

./: CMakeLists.txt  README.md  keyrecorderplugin.cpp  keyrecorderplugin.h  keyrecorderui.rc  keyrecorderview.h  ktexteditor_keyrecorder.desktop
packaging/: ktexteditor-key-recorder-0.1.ebuild
